Revision history for VMware::vCloud

NB: Skipped version numbers were never released.

VERSIONTAG DATETAG

  Added:
    VMware::vCloud - 
    VMware::API::::vCloud - admin(), org_vdc_create()
    API version information is now read directly from offered versions.
    Learned variables and Raw responses now attached to $VMware::API::vCloud::self
    When Debug is on, learned variables are displayed on exit.
    
  Improved:
    Now working with API version v5.1
    Most recent version is used.
    Login URL is now directed by Version response.
    VMware::API::vCloud - org_list() now generated with caching.

  Fixed:
    Version now included in accept header for authentication.
  
2.12 2011/10/27

  Added:
    XML schema descriptors for 1.0 and 1.5 included in distribution.
    VMware::API::vCloud - "Template name validation" to "BUGS and LIMITATIONS" POD.
    VMware::vCloud - create_vapp_from_template(), get_template(), 
      list_networks(), list_vdcs()
    VMware::API::vCloud - template_get()
    examples/list-templates.pl - Example of how to list templates.
    examples/create-vapp-from-template.pl - Instantiate a template with defaults.

  Improved:
    examples/poweron-vapp.pl - Corrected documentation.
    VMware::vCloud & VMware::vCloud::vApp - now used bless() with two arguments.
    VMware::API::vCloud
      _fault() now pushes a Dumper() of the HTTP object on error. That gives 
         more detail on a fault when debug is enabled.
      post() now has optional parameters for content and content type.
      
  Fixed:
    examples/poweron-vappl.pl - Now actually included in the distribution
      
2.07 2011/10/06

  Improved:
    VMware::API::vCloud: Error handling now recognizes an HTTP::Response object.
    Synopsis documentation on VMware::vCloud.

  Fixed:
    Included VMware::vCloud::vApp in MANIFEST

2.06 2011/10/05

  Added:
    VMware::vCloud::vApp - An object representation of a vApp.
    examples/poweron-vapp.pl - Powering a vApp on.
