@@ -4,76 +4,6 @@ MANIFEST
 META.yml
 README
 TODO
-etc/1.0/schemas/admin/admin.xsd
-etc/1.0/schemas/admin/providerVdc.xsd
-etc/1.0/schemas/admin/user.xsd
-etc/1.0/schemas/admin/vCloudEntities.xsd
-etc/1.0/schemas/extension/vmwextensions.xjb
-etc/1.0/schemas/extension/vmwextensions.xsd
-etc/1.0/schemas/master/master.xsd
-etc/1.0/schemas/vcloud/catalog.xsd
-etc/1.0/schemas/vcloud/catalogItem.xsd
-etc/1.0/schemas/vcloud/common.xsd
-etc/1.0/schemas/vcloud/entity.xsd
-etc/1.0/schemas/vcloud/file.xsd
-etc/1.0/schemas/vcloud/media.xsd
-etc/1.0/schemas/vcloud/network.xsd
-etc/1.0/schemas/vcloud/organization.xsd
-etc/1.0/schemas/vcloud/organizationList.xsd
-etc/1.0/schemas/vcloud/ovf.xjb
-etc/1.0/schemas/vcloud/resourceEntity.xsd
-etc/1.0/schemas/vcloud/screenTicket.xsd
-etc/1.0/schemas/vcloud/task.xsd
-etc/1.0/schemas/vcloud/tasksList.xsd
-etc/1.0/schemas/vcloud/vApp.xsd
-etc/1.0/schemas/vcloud/vAppTemplate.xsd
-etc/1.0/schemas/vcloud/vcloud.xjb
-etc/1.0/schemas/vcloud/vcloud.xsd
-etc/1.0/schemas/vcloud/vdc.xsd
-etc/1.5/schemas/admin/admin.xsd
-etc/1.5/schemas/admin/blockingExtensions.xsd
-etc/1.5/schemas/admin/providerVdc.xsd
-etc/1.5/schemas/admin/user.xsd
-etc/1.5/schemas/admin/vCloudEntities.xsd
-etc/1.5/schemas/extension/notification.xsd
-etc/1.5/schemas/extension/settings.xsd
-etc/1.5/schemas/extension/taskExtensionRequest.xsd
-etc/1.5/schemas/extension/vmwextensions.xjb
-etc/1.5/schemas/extension/vmwextensions.xsd
-etc/1.5/schemas/master/master.xsd
-etc/1.5/schemas/vcloud/catalog.xsd
-etc/1.5/schemas/vcloud/catalogItem.xsd
-etc/1.5/schemas/vcloud/common.xsd
-etc/1.5/schemas/vcloud/entity.xsd
-etc/1.5/schemas/vcloud/file.xsd
-etc/1.5/schemas/vcloud/media.xsd
-etc/1.5/schemas/vcloud/network.xsd
-etc/1.5/schemas/vcloud/organization.xsd
-etc/1.5/schemas/vcloud/organizationList.xsd
-etc/1.5/schemas/vcloud/ovf.xjb
-etc/1.5/schemas/vcloud/productSectionList.xsd
-etc/1.5/schemas/vcloud/queryRecordView.xsd
-etc/1.5/schemas/vcloud/queryReferenceView.xsd
-etc/1.5/schemas/vcloud/resourceEntity.xsd
-etc/1.5/schemas/vcloud/screenTicket.xsd
-etc/1.5/schemas/vcloud/session.xsd
-etc/1.5/schemas/vcloud/task.xsd
-etc/1.5/schemas/vcloud/tasksList.xsd
-etc/1.5/schemas/vcloud/vApp.xsd
-etc/1.5/schemas/vcloud/vAppTemplate.xsd
-etc/1.5/schemas/vcloud/vcloud.xjb
-etc/1.5/schemas/vcloud/vcloud.xsd
-etc/1.5/schemas/vcloud/vdc.xsd
-etc/README
-etc/schemas/external/catalog.xml
-etc/schemas/external/ovf1.1/CIM_ResourceAllocationSettingData.xsd
-etc/schemas/external/ovf1.1/CIM_VirtualSystemSettingData.xsd
-etc/schemas/external/ovf1.1/common.xsd
-etc/schemas/external/ovf1.1/dsp8023_1.1.0.xsd
-etc/schemas/external/ovf1.1/dsp8027_1.1.0.xsd
-etc/schemas/external/xml.xsd
-etc/schemas/versioning/versions.xjb
-etc/schemas/versioning/versions.xsd
 examples/create-vapp-from-template.pl
 examples/login.pl
 examples/list-templates.pl
